NOJIRA felles 2.4 og junit5